# forge-base

./: .gitignore  FORGE_MANIFEST.json  README.md  make_manifest.py
lib/AGRMForge/: __init__.py
lib/AuthenticaForge/: __init__.py
lib/CADForge/: __init__.py
lib/ChromaForge/: __init__.py  color_e8.py  conservation.py  contracts.py  lifecycle.py  mdhg.py  mmdb.py  morphon.py  receipt.py  snap.py  speedlight.py  stable_ids.py  tarpit.py
lib/ConvergeForge/: __init__.py  d4_atlas.py
lib/CrystalForge/: __init__.py  brain.py  crystal.py  learner.py  schema.py  stable_ids.py
lib/DoublingForge/: __init__.py
lib/E8Forge/: __init__.py
lib/EntropyForge/: __init__.py
lib/FieldFormForge/: __init__.py
lib/FoldForge/: __init__.py
lib/FridgeForge/: __init__.py  (+2 more)
lib/cqekernel/: .gitignore  FORGE_REGISTRY.json  LCR_TYPED_KERNEL.md  OpsGuide.md  README.md  __init__.py  __main__.py  cli.py  pyproject.toml  stable_ids.py
lib/cqekernel/adapters/: __init__.py  bytes_adapter.py  csv_adapter.py  filesystem.py  host_packet.py  json_adapter.py  text.py
lib/cqekernel/algebra/: __init__.py  f4_action.py  jordan_j3.py  octonion.py
lib/cqekernel/carrier/: __init__.py  binary_boundary.py  cform.py  correction.py  fourbit.py  lcr.py
lib/cqekernel/core/: __init__.py  errors.py  kernel.py  policy.py  request.py  status.py
lib/cqekernel/cqe/: __init__.py  d4_token.py
lib/cqekernel/firmware/: __init__.py  abi.py  algebra_bridge.py  lattice_forge_bridge.py  manifest.py  registry.py
lib/cqekernel/lcr/: __init__.py  combined_cem.py  oloid.py  typed_kernel.py  windows.py
lib/cqekernel/ledger/: __init__.py  event.py  receipt.py  replay.py  snapshot.py  store.py
lib/cqekernel/master_ribbon/: __init__.py  cli.py  compiler.py  model.py
lib/cqekernel/projection/: __init__.py  boundary_aperture.py  closure.py  eversion.py  light_cone.py  observer_frame.py
lib/cqekernel/ribbon/: __init__.py  arity.py  hydrate.py  ribbon.py  slot.py  transport.py
lib/cqekernel/storage/: __init__.py  json_store.py  paths.py  sqlite_store.py
lib/cqekernel/tests/: __init__.py  __main__.py  test_algebra.py  test_algebra_bridge.py  test_carrier.py  test_combined_cem.py  test_identity.py  test_integration.py  test_lattice_forge_bridge.py  test_layer_products.py  test_lcr.py  test_master_ribbon.py  test_master_ribbon_portability.py  test_oloid.py  test_paper_spine.py  test_receipts.py  test_replay.py  test_request.py  test_ribbon.py  test_typed_kernel.py
lib/cqekernel/tmn_services/: __init__.py
lib/cqekernel/v3/: BRIDGE_README.md  README.md  __init__.py  bridge.py  crystal_bridge.py  tmn_ability_bridge.py
lib/cqekernel/verification/: __init__.py  falsifier.py  honesty.py  socratic.py  verifier.py
lib/cqekernel/workbook/: __init__.py  analog_schema.py  token_map.py  workbook_engine.py
(+366 files in other folders)
