# pyproject.toml — cqe-kernel
#
# The stdlib-only CQE/CMPLX source-bound C-form runtime. Zero runtime
# external dependencies — this is the kernel's defining property.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cqe-kernel"
version = "0.1.0"
description = "stdlib-only CQE/CMPLX source-bound C-form runtime. No external dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary / research prototype"}
authors = [{name = "CQE project"}]
keywords = [
    "cqe",
    "cmplx",
    "rule30",
    "kernel",
    "lcr",
    "ribbon",
    "stdlib",
    "no-dependencies",
    "proof-bearing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8", "hypothesis>=6.0", "pytest-benchmark>=4.0"]
dev = ["pytest>=8", "hypothesis>=6.0", "pytest-benchmark>=4.0", "mutmut>=2.0", "mypy>=1.0", "ruff>=0.1.0"]
all = ["pytest>=8", "hypothesis>=6.0", "pytest-benchmark>=4.0", "mutmut>=2.0", "mypy>=1.0", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://github.com/nbarker2021/cqekernel"
Documentation = "https://github.com/nbarker2021/cqekernel/tree/main"

[project.scripts]
cqe-kernel = "cqekernel.cli:main"

[tool.setuptools]
packages = [
    "cqekernel",
    "cqekernel.adapters",
    "cqekernel.algebra",
    "cqekernel.carrier",
    "cqekernel.core",
    "cqekernel.cqe",
    "cqekernel.firmware",
    "cqekernel.ledger",
    "cqekernel.projection",
    "cqekernel.ribbon",
    "cqekernel.master_ribbon",
    "cqekernel.storage",
    "cqekernel.tests",
    "cqekernel.verification",
    "cqekernel.workbook",
]

[tool.setuptools.package-dir]
"cqekernel" = "."
"cqekernel.adapters" = "adapters"
"cqekernel.algebra" = "algebra"
"cqekernel.carrier" = "carrier"
"cqekernel.core" = "core"
"cqekernel.cqe" = "cqe"
"cqekernel.firmware" = "firmware"
"cqekernel.ledger" = "ledger"
"cqekernel.projection" = "projection"
"cqekernel.ribbon" = "ribbon"
"cqekernel.master_ribbon" = "master_ribbon"
"cqekernel.storage" = "storage"
"cqekernel.tests" = "tests"
"cqekernel.verification" = "verification"
"cqekernel.workbook" = "workbook"

[tool.setuptools.package-data]
"cqekernel" = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
